--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,8 +4,11 @@
     "no-plusplus": [0],
     "func-names": ["error", "never"],
     "no-console": [0],
-    "no-shadow": ["error", { "builtinGlobals": false, "hoist": "functions", "allow": ["value", "node"] }],
-    "no-param-reassign": [0]
+    "no-shadow": ["error", { "builtinGlobals": false, "hoist": "functions", "allow": ["value", "node", "arr", "arr1", "arr2", "arr3"] }],
+    "no-unused-expressions": ["error", { "allowShortCircuit": false, "allowTernary": true }],
+    "no-param-reassign": [0],
+    "object-shorthand": ["error", "never"],
+    "no-underscore-dangle": [0]
   },
   "env": {
     "es6": true,
