--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,8 @@
     "no-unused-expressions": ["error", { "allowShortCircuit": false, "allowTernary": true }],
     "no-param-reassign": [0],
     "object-shorthand": ["error", "never"],
-    "no-underscore-dangle": [0]
+    "no-underscore-dangle": [0],
+    "wrap-iife": [0]
   },
   "env": {
     "es6": true,
