eslint cleanup ds

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
     "no-plusplus": [0],
     "func-names": ["error", "never"],
     "no-console": [0],
-    "no-shadow": ["error", { "builtinGlobals": false, "hoist": "functions", "allow": ["value", "node", "arr", "arr1", "arr2", "arr3"] }],
+    "no-shadow": ["error", { "builtinGlobals": false, "hoist": "functions",
+      "allow": ["value", "node", "arr", "arr1", "arr2", "arr3", "list"] }],
     "no-unused-expressions": ["error", { "allowShortCircuit": false, "allowTernary": true }],
     "no-param-reassign": [0],
     "object-shorthand": ["error", "never"],
