--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint **/*.{js} --quiet",
-    "lint-win": "node node_modules\\eslint\\bin\\eslint **/*.{js} --quiet"
+    "lint-win": "node node_modules\\eslint\\bin\\eslint **/** --quiet --fix"
   },
   "repository": {
     "type": "git",
