--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "collection of algorithms, datastructures and utilities",
   "main": "index.js",
   "scripts": {
-    "lint": "./node_modules/.bin/eslint **/*.{js} --quiet",
-    "lint-win": "node node_modules\\eslint\\bin\\eslint **/** --quiet --fix",
+    "lint": "./node_modules/.bin/eslint **/*.js --quiet --fix",
+    "lint-win": "node node_modules\\eslint\\bin\\eslint **/*.js --quiet --fix",
     "test": "jest",
     "test-watch": "jest --watchAll"
   },
