--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,24 +1,30 @@
 {
-  "extends": "airbnb-base",
-  "rules": {
-    "no-plusplus": [0],
-    "func-names": ["error", "never"],
-    "no-console": [0],
-    "no-shadow": ["error", { "builtinGlobals": false, "hoist": "functions",
-      "allow": [
-        "value", "node", "arr", "arr1", "arr2", "arr3", "list", "matrix",
-        "str1", "str2", "str3", "index1", "index2", "index3"
-        ] }],
-    "no-unused-expressions": ["error", { "allowShortCircuit": false, "allowTernary": true }],
-    "no-param-reassign": [0],
-    "object-shorthand": ["error", "never"],
-    "no-underscore-dangle": [0],
-    "wrap-iife": [0]
-  },
-  "env": {
-    "es6": true,
-    "jest": true,
-    "browser": true,
-    "node": true
-  }
+	"extends": "airbnb-base",
+	"rules": {
+		"no-plusplus": [0],
+		"func-names": ["error", "never"],
+		"no-console": [0],
+		"no-shadow": ["error", {
+			"builtinGlobals": false,
+			"hoist": "functions",
+			"allow": [
+				"value", "node", "arr", "arr1", "arr2", "arr3", "list", "matrix",
+				"str1", "str2", "str3", "index1", "index2", "index3"
+			]
+		}],
+		"no-unused-expressions": ["error", {
+			"allowShortCircuit": false,
+			"allowTernary": true
+		}],
+		"no-param-reassign": [0],
+		"object-shorthand": ["error", "never"],
+		"no-underscore-dangle": [0],
+		"wrap-iife": [0]
+	},
+	"env": {
+		"es6": true,
+		"jest": true,
+		"browser": true,
+		"node": true
+	}
 }
